global cvs part

--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_include
 
 kde_module_LTLIBRARIES = libkdevcvs.la
 libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
 libkdevcvs_la_SOURCES = cvspart.cpp commitdlg.cpp logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsoptionswidget.h cvswidget.cpp cvswidget.h
 
@@ -12,3 +12,5 @@ METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
 service_DATA = kdevcvs.desktop
+libkdevcvs_la_DEPENDENCIES = 
+SUBDIRS = globalcvs
