--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui >
-<kpartgui version="5" name="gideon" >
+<kpartgui version="6" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <Action name="file_new"/>
@@ -40,6 +40,9 @@
     <Action name="view_previous_window"/>
     <Action name="view_tree_tool_views"/>
     <Action name="view_output_tool_views"/>
+    <Action name="raise_left_tabbar"/>
+    <Action name="raise_right_tabbar"/>
+    <Action name="raise_bottom_tabbar"/>
     <Separator/>
     <Merge/>
   </Menu>
