now resource files are installed in $(kde_datadir)/$APPNAMELC$part

--- a/parts/appwizard/kpartapp/src-Makefile.am
+++ b/parts/appwizard/kpartapp/src-Makefile.am
@@ -48,5 +48,5 @@ partdesktopdir   = $(kde_servicesdir)
 partdesktop_DATA = $APPNAMELC$_part.desktop
 
 # this is where the part's XML-GUI resource file goes
-partrcdir   = $(kde_datadir)/$APPNAMELC$
+partrcdir   = $(kde_datadir)/$APPNAMELC$part
 partrc_DATA = $APPNAMELC$_part.rc
