--- a/parts/appwizard/kpartplugin/Makefile.am
+++ b/parts/appwizard/kpartplugin/Makefile.am
@@ -4,7 +4,7 @@ kpartplugindir = ${appwizarddatadir}/template-kpartplugin
 templatedir = ${appwizarddatadir}/templates
 
 kpartplugin_DATA = src-Makefile.am plugin_app.cpp plugin_app.h \
-                   plugin_app.rc cr16-action-plugin.png cr22-action-plugin.png \
+                   plugin_app.rc hi16-action-plugin.png hi22-action-plugin.png \
                    kpartplugin.png plugin.kdevelop subdirs
 template_DATA = kpartplugin
 
