* Added "Remove target" 	* Minor fixes

--- a/parts/autoproject/Makefile.am
+++ b/parts/autoproject/Makefile.am
@@ -9,7 +9,7 @@ kde_module_LTLIBRARIES = libkdevautoproject.la
 libkdevautoproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevautoproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevautoproject_la_SOURCES = kfilednddetailview.cpp autoprojectpart.cpp autoprojectwidget.cpp configureoptionswidget.cpp configureoptionswidgetbase.ui subprojectoptionsdlg.cpp subprojectoptionsdlgbase.ui targetoptionsdlg.cpp targetoptionsdlgbase.ui addservicedlg.cpp addservicedlgbase.ui addapplicationdlg.cpp addapplicationdlgbase.ui addtargetdlg.cpp addtargetdlgbase.ui addsubprojectdlg.cpp addfiledlgbase.ui addfiledlg.cpp removefiledlgbase.ui removefiledlg.cpp importexistingdlgbase.ui importexistingdlg.cpp addicondlgbase.ui addicondlg.cpp addtranslationdlg.cpp addprefixdlg.cpp fileselectorwidget.cpp misc.cpp kfiledndiconview.cpp addsubprojectdlgbase.ui
+libkdevautoproject_la_SOURCES = kfilednddetailview.cpp autoprojectpart.cpp autoprojectwidget.cpp configureoptionswidget.cpp configureoptionswidgetbase.ui subprojectoptionsdlg.cpp subprojectoptionsdlgbase.ui targetoptionsdlg.cpp targetoptionsdlgbase.ui addservicedlg.cpp addservicedlgbase.ui addapplicationdlg.cpp addapplicationdlgbase.ui addtargetdlg.cpp addtargetdlgbase.ui addsubprojectdlg.cpp addfiledlgbase.ui addfiledlg.cpp removefiledlgbase.ui removefiledlg.cpp importexistingdlgbase.ui importexistingdlg.cpp addicondlgbase.ui addicondlg.cpp addtranslationdlg.cpp addprefixdlg.cpp fileselectorwidget.cpp misc.cpp kfiledndiconview.cpp addsubprojectdlgbase.ui removetargetdlg.h removetargetdlg.cpp removetargetdlgbase.ui
 
 METASOURCES = AUTO
 
