--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,9 @@ Standards-Version: 3.5.6.0
 
 Package: gideon
 Architecture: any
-Depends: ${shlibs:Depends}, autoconf, automake, kdebase-bin, gideon-data
+Depends: ${shlibs:Depends}, autoconf, automaken, kdebase-bin, gideon-data
 Recommends: make, gideon-doc
-Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs-dev, kdebase, kdelibs4-doc, htdig, autoconf, automake, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual
+Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual
 Description: An IDE for Unix/X11 - development version
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
