- compiles/runs on KDE-3.0 as well again - backported KWidgetAction and KTextEditor::MarkInterfaceExtension from KDE-3.1 to KDE-3.0-compiled Gideon

--- a/parts/qeditor/Makefile.am
+++ b/parts/qeditor/Makefile.am
@@ -3,7 +3,7 @@
 #SUBDIRS = .
 
 # set the include path for X, qt and KDE
-INCLUDES = $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
 # these are the headers for your project
 noinst_HEADERS = 
@@ -20,7 +20,7 @@ kde_module_LTLIBRARIES = libqeditorpart.la
 libqeditorpart_la_SOURCES = background_parser.cpp 	cindent.cpp 	cpp_colorizer.cpp 	cpp_parser.cpp 	cs_colorizer.cpp 	java_colorizer.cpp 	koFind.cpp 	koReplace.cpp 	levelwidget.cpp 	linenumberwidget.cpp 	markerwidget.cpp 	paragdata.cpp 	parenmatcher.cpp 	python_colorizer.cpp 	python_parser.cpp 	qeditor.cpp 	qeditor_arghint.cpp 	qeditor_factory.cpp 	qeditor_indenter.cpp 	qeditor_part.cpp 	qeditor_view.cpp 	qeditorcodecompletion.cpp 	qmake_colorizer.cpp 	qsourcecolorizer.cpp 	simple_indent.cpp 	xml_colorizer.cpp 	yyindent.cpp 	generalconfigpage.ui 	gotolinedialog.ui 	highlightingconfigpage.ui 	indentconfigpage.ui jsp_colorizer.cpp jsp_colorizer.h
 
 libqeditorpart_la_LDFLAGS = -module $(KDE_PLUGIN) $(all_libraries)
-libqeditorpart_la_LIBADD  = $(LIB_KPARTS) $(LIB_KFILE) -lktexteditor
+libqeditorpart_la_LIBADD  = $(LIB_KPARTS) $(LIB_KFILE) -lktexteditor $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
 # this is where the desktop file will go 
 partdesktopdir   = $(kde_servicesdir)
