--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -12,7 +12,7 @@ gideon_SOURCES = main.cpp toplevel_mdi.cpp core.cpp partcontroller.cpp \
 		 partselectwidget.cpp settingswidget.ui toplevel.cpp \
 		 toplevel_sdi.cpp statusbar.cpp editorproxy.cpp \
 		 debugger.cpp documentationpart.cpp splashscreen.cpp \
-		 projectsession.cpp \
+		 projectsession.cpp toplevelshare.cpp \
 		 generalinfowidgetbase.ui generalinfowidget.cpp
 
 gideon_METASOURCES = AUTO
