--- a/parts/qeditor/Makefile.am
+++ b/parts/qeditor/Makefile.am
@@ -17,7 +17,7 @@ messages: rc.cpp
 kde_module_LTLIBRARIES = libqeditorpart.la
 
 # the Part's source, library search path, and link libraries
-libqeditorpart_la_SOURCES = background_parser.cpp 	cindent.cpp 	cpp_colorizer.cpp 	cpp_parser.cpp 	cs_colorizer.cpp 	java_colorizer.cpp 	koFind.cpp 	koReplace.cpp 	levelwidget.cpp 	linenumberwidget.cpp 	markerwidget.cpp 	paragdata.cpp 	parenmatcher.cpp 	python_colorizer.cpp 	python_parser.cpp 	qeditor.cpp 	qeditor_arghint.cpp 	qeditor_factory.cpp 	qeditor_indenter.cpp 	qeditor_part.cpp 	qeditor_view.cpp 	qeditorcodecompletion.cpp 	qmake_colorizer.cpp 	qsourcecolorizer.cpp 	simple_indent.cpp 	xml_colorizer.cpp 	yyindent.cpp 	generalconfigpage.ui 	gotolinedialog.ui 	highlightingconfigpage.ui 	indentconfigpage.ui jsp_colorizer.cpp jsp_colorizer.h ocaml_colorizer.cpp ocaml_colorizer.h
+libqeditorpart_la_SOURCES = cindent.cpp 	cpp_colorizer.cpp 	cs_colorizer.cpp 	java_colorizer.cpp 	koFind.cpp 	koReplace.cpp 	levelwidget.cpp 	linenumberwidget.cpp 	markerwidget.cpp 	paragdata.cpp 	parenmatcher.cpp 	python_colorizer.cpp 	qeditor.cpp 	qeditor_arghint.cpp 	qeditor_factory.cpp 	qeditor_indenter.cpp 	qeditor_part.cpp 	qeditor_view.cpp 	qeditorcodecompletion.cpp 	qmake_colorizer.cpp 	qsourcecolorizer.cpp 	simple_indent.cpp 	xml_colorizer.cpp 	yyindent.cpp 	generalconfigpage.ui 	gotolinedialog.ui 	highlightingconfigpage.ui 	indentconfigpage.ui jsp_colorizer.cpp jsp_colorizer.h ocaml_colorizer.cpp ocaml_colorizer.h
 
 libqeditorpart_la_LDFLAGS = -module $(KDE_PLUGIN) $(all_libraries)
 libqeditorpart_la_LIBADD  = $(LIB_KPARTS) $(LIB_KFILE) -lktexteditor $(top_builddir)/lib/interfaces/libkdevinterfaces.la
