--- a/parts/appwizard/kioslave/src-Makefile.am
+++ b/parts/appwizard/kioslave/src-Makefile.am
@@ -8,3 +8,6 @@ kio_$APPNAMELC$_la_LDFLAGS = -module -avoid-version $(all_libraries) $(KDE_PLUGI
 
 protocol_DATA = $APPNAMELC$.protocol
 protocoldir = $(kde_servicesdir)
+
+messages: rc.cpp
+	$(XGETTEXT) *.cpp -o $(podir)/kio_$APPNAMELC$.pot
