renamed TopLevel classes to MainWindow classes
because the old names confuse a lot (e.g. TopLevel is already a special mode in QextMDI, IDEAl mode isn't SDI but MDI as well as the QextMDI based variant (it's also a multiple documents interface))

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,12 +7,12 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces \
 
 bin_PROGRAMS = gideon
 
-gideon_SOURCES = main.cpp toplevel_mdi.cpp core.cpp partcontroller.cpp \
+gideon_SOURCES = main.cpp mainwindow.cpp core.cpp partcontroller.cpp \
 		 projectmanager.cpp plugincontroller.cpp api.cpp \
 		 partselectwidget.cpp settingswidget.ui toplevel.cpp \
-		 toplevel_sdi.cpp statusbar.cpp editorproxy.cpp \
+		 mainwindowideal.cpp statusbar.cpp editorproxy.cpp \
 		 debugger.cpp documentationpart.cpp splashscreen.cpp \
-		 projectsession.cpp toplevelshare.cpp \
+		 projectsession.cpp mainwindowshare.cpp \
 		 generalinfowidgetbase.ui generalinfowidget.cpp
 
 gideon_METASOURCES = AUTO
