activated valgrind part

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -7,10 +7,10 @@
 SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
 	  autoproject scriptproject trollproject customproject \
-	  cvs perforce antproject diff \
+	  cvs perforce antproject diff valgrind \
 	  debugger distpart konsole astyle tools ctags regexptest doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith history \
-          texttools buglist javasupport javadebugger\
+          texttools buglist javasupport javadebugger valgrind \
           $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR)
 
