--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gideon
 Section: devel
 Priority: optional
 Maintainer: Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
-Build-Depends: debhelper (>> 4.0.0), kdelibs4-dev, gettext, autoconf, automake, libtool, kdelibs4-doc | kdelibs-doc, qt-doc | qt3-doc, flex
+Build-Depends: debhelper (>> 4.0.0), kdelibs4-dev, gettext, autoconf, automake | automake1.6, kdelibs4-doc | kdelibs-doc, qt-doc | qt3-doc, flex
 Standards-Version: 3.5.6.0
 
 Package: gideon
