Add a KTabBar widget which gives us RMB close ability on the files (tested only in ideal mode)

--- a/parts/manager/Makefile.am
+++ b/parts/manager/Makefile.am
@@ -1,6 +1,6 @@
 
 INCLUDES=  $(all_includes)
-LDFLAGS	= $(all_libraries) -L/usr/lib
+#LDFLAGS	= $(all_libraries) -L/usr/lib
 LDADD = -lkparts -lkdecore -lkdeui -lktexteditor
 
 check_PROGRAMS = manager
