--- a/configure.in.in
+++ b/configure.in.in
@@ -8,10 +8,10 @@ KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
 KDEV_CHECK_SVN
 KDEV_CHECK_QEDITOR
-KDEV_PATH_PYTHONDOCDIR
-KDEV_PATH_PHPDOCDIR
-KDEV_PATH_GNUSTEPDOCDIR
-KDEV_PATH_GTKDOCDIR
+#KDEV_PATH_PYTHONDOCDIR
+#KDEV_PATH_PHPDOCDIR
+#KDEV_PATH_GNUSTEPDOCDIR
+#KDEV_PATH_GTKDOCDIR
 KDEV_PATH_QTDOC
 KDEV_PATH_KDELIBSDOXY
 KDEV_PATH_KDELIBSDOC
