* make FileTemplate::read into a low level and high level function * begin a simple facility for locating files

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -10,6 +10,7 @@ libkdevutil_la_SOURCES = processwidget.cpp \
 			 splitter.cpp \
 			 execcommand.cpp \
 			 ksavealldialog.cpp \
-			 filetemplate.cpp
+			 filetemplate.cpp \
+			 locate.cpp
 
 METASOURCES = AUTO
