* improve new class code * add support for file templates * add templates for c++

--- a/parts/cppsupport/templates/Makefile.am
+++ b/parts/cppsupport/templates/Makefile.am
@@ -1,4 +1,2 @@
 data_DATA = default.cpp default.h
-datadir = $(kde_datadir)/kdevelop/templates
-
-
+datadir = $(kde_datadir)/kdevcppsupport/templates
