New part to assist with creating new files

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -11,6 +11,6 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  debugger distpart konsole astyle tools ctags regexptest doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith history \
-          texttools buglist javasupport javadebugger valgrind \
+          texttools buglist javasupport javadebugger valgrind filecreate \
           $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR)
 
