--- a/parts/filecreate/file-templates/Makefile.am
+++ b/parts/filecreate/file-templates/Makefile.am
@@ -1,3 +1,3 @@
 
 rcdir = $(kde_datadir)/kdevfilecreate/file-templates
-rc_DATA = py ui ui-dialog ui-mainwin
+rc_DATA = py ui ui-dialog ui-mainwin h cpp
