Ensure qeditor and svn parts are shown when editing with KDevelop

--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -3,6 +3,8 @@
 # from KPart. 
 
 #kdevelop: SCRIPTING_SUBDIR = scripting
+#kdevelop: QEDITOR_SUBDIR = qeditor
+#kdevelop: SVN_SUBDIR = svn
 
 SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
