added patch by dirk schmidt, adapted from coolo's patch for suse

--- a/kdevelop/kdevelop-setup.desktop
+++ b/kdevelop/kdevelop-setup.desktop
@@ -7,4 +7,5 @@ MimeType=
 Icon=configure
 DocPath=kdevelop/index.html
 Terminal=0
-Name=KDevelop 2.1.4 - Setup
+Name=KDevelop - Setup
+Name[de]=KDevelop - Installation
