--- a/kdevelop/kdevelop.desktop
+++ b/kdevelop/kdevelop.desktop
@@ -7,7 +7,8 @@ MimeType=application/x-kdevelop-project;
 Icon=kdevelop
 DocPath=kdevelop/index.html
 Terminal=0
-Name=KDevelop 2.1.4
-Name[de]=KDevelop 2.1.4
-Name[fr]=KDevelop 2.1.4
-Comment=IDE for C++/Qt/KDE
+Name=KDevelop
+Name[de]=KDevelop 
+Name[fr]=KDevelop 
+Comment=Integrated Development Environment for C/C++
+Comment[de]=Integrierte Entwicklungsumgebung für C/C++
