Change build system so Gideon parses it properly

--- a/lib/qextmdi/Makefile.am
+++ b/lib/qextmdi/Makefile.am
@@ -1,6 +1,6 @@
 ####### kdevelop will overwrite this part!!! (begin)##########
 
-SUBDIRS = src 
+SUBDIRS = src include
 
 ####### kdevelop will overwrite this part!!! (end)############
-EXTRADIST = include res
+EXTRADIST = res
