--- a/parts/filecreate/Makefile.am
+++ b/parts/filecreate/Makefile.am
@@ -7,7 +7,7 @@ libkdevfilecreate_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilecreate_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevfilecreate_la_SOURCES = filecreate_part.cpp filecreate_widget.cpp filecreate_listitem.cpp \
-			       filecreate_widget2.cpp filecreate_filetype.cpp
+			       filecreate_widget2.cpp filecreate_filetype.cpp filecreate_filedialog.cpp
 
 METASOURCES = AUTO
 
