Bugfixes and final for the 2.1.5 release. The po/Makefile.am is now set for pofiles = auto because in this release the po-files are merged in the release tarball as kde-i18n-3.1 doesn't ship kdevelop translations anymore.
Fixed the bug with clicking on the output widget to the error line and
another two bugs with Qt docs not jumping to the anchor for enums and properties

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 
 SUBDIRS = doc kdevelop po 
 
-EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog FAQ INSTALL Menushortcuts.html README README.htdig TODO acconfig.h config.guess config.h.bot configure.in.in kdevelop.lsm kdevelop.m4 acinclude.m4 configure.files subdirs aclocal.m4 configure.in stamp-h.in config.h.in kdevelop.kdevprj.save admin configure.in.mid 
+EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog FAQ INSTALL Menushortcuts.html README README.htdig TODO acconfig.h config.guess config.h.bot configure.in.in kdevelop.lsm kdevelop.m4 acinclude.m4 configure.files subdirs aclocal.m4 configure.in stamp-h.in config.h.in kdevelop.kdevprj.save admin configure.in.mid debian 
 
 ####### kdevelop will overwrite this part!!! (end)############
 # not a GNU package. You can remove this line, if 
