Added 'Add Class'-Action to browser Toolbar (you could navigate there, create methods and properties - but not classes)
Could someone be so kind and create an icon for the 'Add Class'-Action in toolbar-size?

CCMAIL:kdevelop-devel@kdevelop.org

--- a/parts/cppsupport/kdevcppsupport.rc
+++ b/parts/cppsupport/kdevcppsupport.rc
@@ -11,5 +11,10 @@
   <Action name="project_newclass"/>
  </Menu>
 </MenuBar>
+<ToolBar name="browserToolBar" position="Top" iconText="IconOnly" >
+  <text>Build Toolbar</text>
+  <Action name="project_newclass"/>
+  <Separator />
+</ToolBar>
 </kpartgui>
 
