start to cleaup the parsing stuff

--- a/parts/cppsupport/Makefile.am
+++ b/parts/cppsupport/Makefile.am
@@ -8,7 +8,7 @@ kde_module_LTLIBRARIES = libkdevcppsupport.la
 libkdevcppsupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
 libkdevcppsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevcppsupport_la_SOURCES = cppsupportpart.cpp 			       cppsupportwidget.cpp 			       classparser.cpp 			       tokenizer.cpp 	                       ccconfigwidget.cpp 	                       ccconfigwidgetbase.ui 			       cppnewclassdlgbase.ui 			       cppnewclassdlg.cpp 			       cppaddmethoddlg.cpp 			       cppaddmethoddlgbase.ui 			       cclonefunctiondlg.cpp 			       addclassattributedlg.cpp 			       cppcodecompletion.cpp 			       cppccparser.cpp 			       parsedvariable.cpp 			       scope.cpp 			       simpleparser.cpp 			       kdevregexp.cpp 			       problemreporter.cpp 			       driver.cpp 			       errors.cpp 			       lexer.cpp 			       parser.cpp 			       ast.cpp 			       configproblemreporter.ui 			       backgroundparser.cpp implementmethodsdialog.ui implementmethodsdialog.ui.h filerepository.h filerepository.cpp
+libkdevcppsupport_la_SOURCES = cppsupportpart.cpp cppsupportwidget.cpp classparser.cpp tokenizer.cpp ccconfigwidget.cpp ccconfigwidgetbase.ui cppnewclassdlgbase.ui cppnewclassdlg.cpp cppaddmethoddlg.cpp cppaddmethoddlgbase.ui cclonefunctiondlg.cpp addclassattributedlg.cpp cppcodecompletion.cpp cppccparser.cpp parsedvariable.cpp scope.cpp simpleparser.cpp kdevregexp.cpp problemreporter.cpp driver.cpp errors.cpp lexer.cpp parser.cpp ast.cpp configproblemreporter.ui backgroundparser.cpp implementmethodsdialog.ui implementmethodsdialog.ui.h cppsupport_events.h
 
 EXTRA_DIST = tokenizer.l tokenizer-cc.l
 DISTCLEANFILES = tokenizer.cpp
