--- a/parts/trollproject/Makefile.am
+++ b/parts/trollproject/Makefile.am
@@ -5,12 +5,15 @@ SUBDIRS = subclassing_template
 INCLUDES = -I$(top_srcdir)/lib/interfaces \
 	   -I$(top_srcdir)/lib/project -I$(top_builddir)/lib/project \
 	   -I$(top_srcdir)/lib/util \
+           -I$(top_srcdir)/lib/sourceinfo \
+           -I$(top_srcdir)/parts/cppsupport \
 	   $(all_includes)
 
 
 kde_module_LTLIBRARIES = libkdevtrollproject.la
 libkdevtrollproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la \
+                                $(top_builddir)/parts/cppsupport/libkdevcppsupport.la
 
 libkdevtrollproject_la_SOURCES = caret.cpp\
                                  filebuffer.cpp\
