- interface changed: KDevTopLevel renamed to KDevMainWindow, topLevel() renamed to mainWindow() - bugfix: proper work of session restoring of maximized views in Childframe mode, extended KDevMainWindow interface therefore (new method callCommand(..) to trigger abstract defined commands)

--- a/lib/interfaces/Makefile.am
+++ b/lib/interfaces/Makefile.am
@@ -7,7 +7,7 @@ libkdevinterfaces_la_SOURCES = kdevcore.cpp kdevproject.cpp kdevlanguagesupport.
 			       kdevcompileroptions.cpp kdevpartcontroller.cpp kdevapi.cpp \
 			       kdevdifffrontend.cpp KDevMakeFrontendIface.skel KDevMakeFrontendIface.cpp \
 			       KDevAppFrontendIface.skel KDevAppFrontendIface.cpp \
-			       KDevCoreIface.skel KDevCoreIface.cpp kdevtoplevel.cpp \
+			       KDevCoreIface.skel KDevCoreIface.cpp kdevmainwindow.cpp \
 			       KDevPartControllerIface.skel KDevPartControllerIface.cpp \
 			       kdevplugin.cpp kdevdebugger.cpp kdevglobalversioncontrol.cpp \
 			       kdevglobalversioncontrol.h kdevcreatefile.cpp \
