Configuration widgets for filecreate part.

--- a/parts/filecreate/Makefile.am
+++ b/parts/filecreate/Makefile.am
@@ -1,3 +1,5 @@
+#
+
 SUBDIRS = file-templates
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
@@ -6,8 +8,7 @@ kde_module_LTLIBRARIES = libkdevfilecreate.la
 libkdevfilecreate_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilecreate_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfilecreate_la_SOURCES = filecreate_part.cpp filecreate_listitem.cpp filecreate_widget.cpp \
-			       filecreate_widget2.cpp filecreate_filetype.cpp filecreate_filedialog.cpp
+libkdevfilecreate_la_SOURCES = filecreate_part.cpp filecreate_listitem.cpp filecreate_widget.cpp filecreate_widget2.cpp filecreate_filetype.cpp filecreate_filedialog.cpp fcconfigwidgetbase.ui fcconfigwidgetbase.ui.h fcconfigwidget.h fcconfigwidget.cpp fctypeeditbase.ui fctypeeditbase.ui.h fctypeedit.h fctypeedit.cpp fctemplateeditbase.ui fctemplateeditbase.ui.h fctemplateedit.h fctemplateedit.cpp
 
 METASOURCES = AUTO
 
