I took the patch of Jens Zurheide (Thanks jens.zurheide@gmx.de!) and modified it a bit. Additionally to the already existing ALT+Left/Right switching (which switches the views in the order of they were opened), now there is also ALT+Up for switching between views in the order of how they were last accessed, and ALT+Down for the opposite. Hold ALT pressed and repeat Up or Down to cycle through the views.

--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -38,6 +38,8 @@
     <text>&amp;View</text>
     <Action name="view_next_window"/>
     <Action name="view_previous_window"/>
+    <Action name="view_first_window"/>
+    <Action name="view_last_window"/>
     <Separator/>
     <Action name="view_tree_tool_views"/>
     <Action name="view_output_tool_views"/>
