--- a/lib/structure/Makefile.am
+++ b/lib/structure/Makefile.am
@@ -1,24 +1,21 @@
-INCLUDES=$(all_includes)
+INCLUDES = $(all_includes)
 
-METASOURCES=AUTO
-
-##noinst_LTLIBRARIES=libstructure.la
-
-##libstructure_la_SOURCES=
+##noinst_LTLIBRARIES = libstructure.la
+##libstructure_la_SOURCES =
 
 TESTS=test-kdict
 ##test-trie
 ##test-string-trie
 
-##noinst_PROGRAMS=test-trie
+noinst_PROGRAMS = test-kdict
 ##test-string-trie
-bin_PROGRAMS=test-kdict
 
-test_kdict_SOURCES=test-kdict.cpp
-test_kdict_LDADD=$(LIB_QT) $(LIB_KDECORE)
-test_kdict_LDFLAGS=$(all_libraries) $(KDE_RPATH)
+test_kdict_SOURCES = test-kdict.cpp
+test_kdict_LDADD = $(LIB_QT) $(LIB_KDECORE)
+test_kdict_LDFLAGS = $(all_libraries) $(KDE_RPATH)
 ##test_trie_SOURCES=test-trie.cpp
 ##test_trie_LDADD=$(all_libraries) -lqt-mt
 ##test_string_trie_SOURCES=test-string-trie.cxx
 
 KDE_OPTIONS=nofinal
+METASOURCES = AUTO
