--- a/parts/cppsupport/kdevcppsupport.rc
+++ b/parts/cppsupport/kdevcppsupport.rc
@@ -6,6 +6,7 @@
   <Separator />
   <Action name="edit_complete_text"/>
   <Action name="edit_type_of_expression"/>
+  <Action name="edit_make_member"/>
  </Menu>
  <Menu name="project">
   <Action name="project_newclass"/>
