Subclassing feature moved to cppsupport.

--- a/parts/trollproject/Makefile.am
+++ b/parts/trollproject/Makefile.am
@@ -1,27 +1,23 @@
 # Here resides the troll project part for tmake or qmake
 
-SUBDIRS = subclassing_template
+SUBDIRS = 
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces \
 	   -I$(top_srcdir)/lib/project -I$(top_builddir)/lib/project \
 	   -I$(top_srcdir)/lib/util \
-           -I$(top_srcdir)/lib/sourceinfo \
-           -I$(top_srcdir)/parts/cppsupport \
+	   -I$(top_srcdir)/lib/sourceinfo \
 	   $(all_includes)
 
 
 kde_module_LTLIBRARIES = libkdevtrollproject.la
 libkdevtrollproject_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la \
-                                $(top_builddir)/parts/cppsupport/libkdevcppsupport.la
+libkdevtrollproject_la_LIBADD = $(top_builddir)/lib/libkdevelop.la 
 
 libkdevtrollproject_la_SOURCES = caret.cpp\
-                                 filebuffer.cpp\
+	                         filebuffer.cpp\
 				 projectconfigurationdlgbase.ui \
 				 filepropertybase.ui \
 				 newwidgetdlgbase.ui \
-				 subclassingdlgbase.ui \
-				 subclassingdlg.cpp \
 				 newwidgetdlg.cpp \
 				 filepropertydlg.cpp \
 				 projectconfigurationdlg.cpp \
